fix: case list and elements z-index

--- a/src/components/flow/routers/case/CaseElement.module.scss
+++ b/src/components/flow/routers/case/CaseElement.module.scss
@@ -134,7 +134,6 @@ input:focus {
   cursor: pointer;
   margin-left: 4px;
   font-size: 9px;
-  z-index: 3000;
 }
 
 .empty {
