--- a/src/components/flow/routers/caselist/CaseList.module.scss
+++ b/src/components/flow/routers/caselist/CaseList.module.scss
@@ -24,8 +24,6 @@
 }
 
 .kase {
-  z-index: 2000;
-
   &:last-child {
     :global {
       .fe-x {
